--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
 
